@@ -1,3 +1,10 @@
+2005-08-13 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b5
+
+	* Fix: Using referer for generating embedded urlprefix wasnt a good idea.
+	        Instead now use Gallery Url + script_name.
+
+	Thanks to Mark (SG7)
+
 2005-08-12  Bharat Mediratta  <bharat@menalto.com> 1.5.1-RC3-cvs-b4
 
 	* Fix: typo in albums.php 'posess' -> 'possess' (thanks driz)
